various style improvements

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -11,7 +11,7 @@ footer{
 }
 
 .flex-center > a:hover {
-  color: yellow;
+  color: #FFD700;
 }
 
 .footer-copyright > a {
@@ -20,5 +20,5 @@ footer{
 }
 
 .footer-copyright > a:hover {
-  color: yellow;
+  color: #FFD700;
 }
