--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -8,18 +8,30 @@ h2{
 
 }
 
+h4
+{
+  text-align: center;
+}
+
 .login{
 padding: 3px;
-color: gold;
+color: #FFD700;
 }
 
 .form-inputs{
-color: gold;
+color: #FFD700;
 font-style: oblique;
 }
 
 
 .form-actions{
 
-  color: gold;
+  color: #FFD700;
 }
+
+
+.index-page{
+  color:#FFD700;
+}
+
+
