--- a/app/views/watches/edit.html.erb
+++ b/app/views/watches/edit.html.erb
@@ -1,1 +1,14 @@
 <h1>Edit this watch</h1>
+
+
+
+<div class="container">
+  <%= simple_form_for @watch do |f| %>
+    <%= f.input :name %>
+    <%= f.input :address %>
+    <%= f.input :price %>
+    <%= f.submit %>
+  <% end %>
+</div>
+
+<%= render "scriptautocomplete" %>
