--- a/app/views/watches/new.html.erb
+++ b/app/views/watches/new.html.erb
@@ -1,7 +1,8 @@
 <h1>Create new watch</h1>
 
 <%= simple_form_for @watch do |f| %>
-          <%= f.input :name %>
+          <%= f.input :brand %>
+          <%= f.input :description %>
           <%= f.input :photo, as: :file %>
           <%= f.submit "Submit", class: "btn btn-dark" %>
         <% end %>
