--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -24,14 +24,43 @@ font-style: oblique;
 }
 
 
-.form-actions{
+.login-actions{
 
   color: #FFD700;
 }
 
+.signin-actions{
+color: silver;
+}
 
 .index-page{
   color:#FFD700;
 }
 
+.btn2{
+background-color: #000;
+}
 
+body{
+background-image: url(background.jpg);
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover
+}
+
+
+.container{
+color: white;
+font-style: oblique;
+margin-left: 400px;
+background-color: rgba(52, 58, 64, 0.6);
+background-position: 50% 10%;
+width: auto;
+border-radius: 10px;
+text-align: center;
+height: 400px;
+margin-top: 120px;
+margin-bottom: 120px;
+padding: 25px;
+
+}
