index page and minor fuckups

--- a/app/assets/stylesheets/components/_newwatch.scss
+++ b/app/assets/stylesheets/components/_newwatch.scss
@@ -14,11 +14,8 @@ padding: 25px;
 
 }
 
-h1{
-  font-family: sans-serif;
-}
 
-body{
+.new-watch-body{
 background-image: url(background.jpg);
 background-position: center;
 background-repeat: no-repeat;
