--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,4 +1,4 @@
-<body>
+<div class="show-watch-body">
   <div class="show-watch">
     <div class="show_card" style="max-width: 840px; align-content: center;padding-top: 5px">
       <div class="row no-gutters">
@@ -18,5 +18,5 @@
       </div>
     </div>
   </div>
-</body>
+</div>
 
