--- a/app/assets/stylesheets/components/_showwatch.scss
+++ b/app/assets/stylesheets/components/_showwatch.scss
@@ -25,7 +25,7 @@
   justify-content: space-evenly;
 }
 
-body {
+.show-watch-body {
   background-image: url("show.jpg");
   background-size: cover;
   background-position: center;
