--- a/app/views/watches/edit.html.erb
+++ b/app/views/watches/edit.html.erb
@@ -1,14 +1,13 @@
-<h1>Edit this watch</h1>
-
-
-
-<div class="container">
-  <%= simple_form_for @watch do |f| %>
-    <%= f.input :name %>
-    <%= f.input :address %>
-    <%= f.input :price %>
-    <%= f.submit %>
-  <% end %>
+<div class="new-container w-50 ">
+  <div class="new-watch  ">
+      Edit this watch
+  <div class="card-body">
+<%= simple_form_for @watch do |f| %>
+          <%= f.input :brand %>
+          <%= f.input :description %>
+          <%= f.input :photo, as: :file %>
+          <%= f.submit "Submit", class: "btn btn-dark  w-25" %>
+        <% end %>
+  </div>
+  </div>
 </div>
-
-<%= render "scriptautocomplete" %>
