--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,3 +2,11 @@
   background-image: url(watch2.jpg);
   background-size: cover;
 }
+
+.banner-container{
+  margin-left: 100px;
+}
+
+.rent-button{
+  margin-top: 10px;
+}
