--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="banner">
-  <div class="container">
+  <div class="banner-container">
     <h1><strong>Watch it</strong>!</h1>
     <p>Impress your friends with a trendy watch</p>
 
@@ -13,7 +13,7 @@
   <input type="search" id="search-box" placeholder="Search">
 </form>
 
-    <a class="btn btn-primary" href="#">Rent now</a>
+    <a class="btn btn-primary rent-button" href="#">Rent now</a>
   </div>
 </div>
 
