--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -75,6 +75,7 @@ background-position: 20% 10%;
   padding-top: 10px;
   color: silver;
   text-align: center;
+}
 
 .card-category {
   background-size: cover;
