--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,31 +1,30 @@
+// s.card-img-top{
+// padding: 10px;
+// }
 
-.card-img-top{
-padding: 10px;
-}
+// .card-body{
+//   padding: 10px;
 
-.card-body{
-  padding: 10px;
+// }
 
-}
+// .card-text{
+//   font-family:times;
+// }
 
-.card-text{
-  font-family:times;
-}
+// .card-title{
+//   font-family:times;
+// }
+// .card{
+//   background-image: linear-gradient(315deg, #e9bcb7 0%, #29524a 74%);
+//   background-position: 50% 10%;
+//   width: auto;
+//   border-radius: 10px;
+//   text-align: center;
+//   height: 200px;
 
-.card-title{
-  font-family:times;
-}
-.card{
-  background-image: linear-gradient(315deg, #e9bcb7 0%, #29524a 74%);
-  background-position: 50% 10%;
-  width: auto;
-  border-radius: 10px;
-  text-align: center;
-  height: 200px;
-
-}
-.btn-primary{
-  border-radius: 10px;
-}
+// }
+// .btn-primary{
+//   border-radius: 10px;
+// }
 
 
