--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -1,32 +1,90 @@
-<div class="dashboard-title">
-  <h1>My Dashboard</h1>
-</div>
+<div class="dashboard-home">
 
-<div class="dashboard-body d-flex">
-
-  <div class="dashboard-sidebar">
-  </div>
-
-  <div class="dashboard-tabs">
-    <ul class="nav nav-tabs">
-      <li class="active tab-title"><a data-toggle="tab" href="#home">Main</a></li>
-      <li class="tab-title"><a data-toggle="tab" href="#menu1">My Watches</a></li>
-    </ul>
-
-    <div class="tab-content">
-
-      <div id="home" class="tab-pane fade in active">
-        <h3>My rentals</h3>
-        <p>Some content.</p>
-      </div>
-
-      <div id="menu1" class="tab-pane fade">
-        <h3>Menu 1</h3>
-        <p>Some content in menu 1.</p>
+  <div class="dashboard-body d-flex">
+    <div class="dashboard-sidebar">
+      <div class="logo-box">
+        <%= image_tag "logo.png", :class => "dashboard-style-logo", :id => "sidebar" %>
       </div>
     </div>
-  </div>
+
+    <div class="dashboard-tabs">
+      <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true"><i class="fas fa-home"></i></a>
+        </li>
+        <li class="nav-item" role="presentation">
+          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">My Watches</a>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
 
+          <div class="current-bookings">
+            <div class="dashboard-page-title">
+              <h1> My current bookings </h1>
+            </div>
+            </br>
+            <div class="dashboard-cards">
+              <% current_user.bookings.each do |booking| %>
+                <div class="card dashboard-card" style="width: 18rem;">
+                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= booking.watch.brand %></h5>
+                    <p class="card-text">€ <%= booking.watch.price %></p>
+                    <p class="card-text">Meet your lender:</p>
+                    <p class="card-text"><%= "#{booking.watch.user.first_name} #{booking.watch.user.last_name}"%></p>
+                    <a href="#" class="btn btn-dashboard">See booking details</a>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          </div>
+          </br>
+          </br>
 
+          <div class="dashboard-page-title">
+            <h1> Past bookings </h1>
+          </div>
+
+          <div class="dashboard-cards">
+              <% current_user.bookings.each do |booking| %>
+                <div class="card dashboard-card" style="width: 18rem;">
+                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= booking.watch.brand %></h5>
+                    <p class="card-text">€ <%= booking.watch.price %></p>
+                    <p class="card-text">Meet your lender:</p>
+                    <p class="card-text"><%= "#{booking.watch.user.first_name} #{booking.watch.user.last_name}"%></p>
+                    <a href="#" class="btn btn-dashboard">See booking details</a>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+
+        </div>
+
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+          <p>more on watches</p>
+        </div>
+
+      </div>
+
+        <div id="home" class="tab-pane fade in active">
+          <h3>My rentals</h3>
+          <p>Some content.</p>
+
+          <% current_user.bookings.each do |booking| %>
+          <% end %>
+
+        </div>
+
+        <div id="menu1" class="tab-pane fade">
+          <h3>Menu 1</h3>
+          <p>Some content in menu 1.</p>
+        </div>
+      </div>
+    </div>
 </div>
+
