added links from index to show and from show to new booking

--- a/app/views/watches/_card.html.erb
+++ b/app/views/watches/_card.html.erb
@@ -7,7 +7,8 @@
 
   <div class="card-body">
     <h5 class="card-title"><strong><%= watch.brand %></strong></h5>
-    <a href="#" class="index-button"> Select </a>
+    <%= link_to 'Show', watch_path(watch), class: "index-button" %>
   </div>
 </div>
+
 
