--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -10,7 +10,11 @@
             <p class="card-text"> <%= @watch.description %> </p>
             <p class="card-text"> <%= @watch.price %> € </p>
             <div class="inner-wrapper header-textbox-bottom-right">
-              <button class="btn btn-primary">Book now</button>
+            <% if user_signed_in? %>
+              <%= link_to 'Book Now', new_watch_booking_path(@watch), class: "btn btn-primary" %>
+            <% else %>
+              <%= link_to 'Book Now', user_session_path(), class: "btn btn-primary" %>
+            <% end %>
             </div>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
