--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -7,28 +7,16 @@ a:hover {
   text-decoration:none;
 }
 
-h1,h2,h3,p {
-  font-family: 'Raleway', sans-serif;
-}
-
-h1 {
-  font-size: 20px;
-}
-
-h3 {
-  font-size: 17px;
-}
-
-.dashboard-home {
-  background-color: white;
-}
-
 .dashboard-title {
   background-color: rgba(255,255,255,0.6);
   position: absolute;
   top: 40px;
   left: 120px;
   padding: 20px;
+}
+
+.dashboard-page-title {
+  font-height: 13px;
 }
 
 .dashboard-sidebar {
@@ -66,24 +54,24 @@ h3 {
 }
 
 .dashboard-style-logo {
-  position: absolute;
-  top: 20px;
-  left: 20px;
   width: 100px;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 .logo-box {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-left:10px;
 }
 
 .dashboard-card {
   border: 1px solid white;
-  border-top: 30px solid white;
+  border-top: 30px solid #79C3BD;
   padding: 20px 10px;
   margin: 10px;
   border-radius: 5px 5px 0 0;
-  background-color: rgba(194,227,224,0.2);
-  box-shadow: 3px 3px 10px 2px rgba(137,137,137,0.2);
+  background-color: white;
+  box-shadow: 5px 5px 10px 2px rgba(240,240,240,0.6);
 }
 
 .dashboard-cards {
@@ -93,21 +81,21 @@ h3 {
 }
 
 .btn-dashboard {
-  background-color: white;
-  font-height: 8px;
-  box-shadow: 2px 2px 8px 5px rgba(133,133,133,0.1);
-}
-
-.btn-dashboard:hover {
   background-color: rgba(133,133,133,0.6);
   border: 0.5px solid white;
   color: white;
 }
 
+.btn-dashboard:hover {
+  background-color: white;
+  font-height: 8px;
+  box-shadow: 4px 4px 8px 5px rgba(240,240,240,0.8);
+  border: 0.5px solid #B6B6B6;
+}
+
 .fa-home {
   padding-left: 15px;
   padding-right: 15px;
-  color: white;
 }
 
 a#profile-tab {
@@ -117,6 +105,7 @@ a#profile-tab {
 
 a#home-tab.active {
   background-color: #232323;
+  color: white;
 }
 
 a#profile-tab.active {
@@ -132,4 +121,116 @@ a#profile-tab:hover {
   color: #B8B8B8;
 }
 
+.meet-lender {
+  font-weight: 800;
+  color: #6B757E;
+}
 
+.dropdown.dashboard-home {
+}
+
+.lender-info-card {
+  background-color: white;
+  padding: 10px;
+  padding-bottom: 0px;
+  padding-right: 20px;
+  margin-bottom: 10px;
+}
+
+.fa-envelope:hover {
+  color: #79C3BD;
+
+}
+
+.lender-info {
+  padding-left: 10px;
+}
+
+p.lender-info {
+  padding: 0px;
+  margin: 0px;
+}
+
+
+.dashboard-header {
+  min-height: 120px;
+  background-color: #292929;
+}
+
+.dashboard-home > .btn {
+  border-radius: 0px;
+}
+
+.search-form-control {
+  position: relative;
+}
+
+.search-form-control .btn {
+  position: absolute;
+  top: 8px;
+  bottom: 8px;
+  right: 8px;
+}
+
+.search-form-control .form-control {
+  height: 3.5rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  border: 1px solid #E7E7E7;
+}
+
+.search-form-control .form-control:focus {
+  border: 1px solid #1EDD88;
+  outline: none !important;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+}
+
+.dashboard-search-bar {
+  padding-top: 20px;
+}
+
+.dashboard-search-bar .form-control {
+  border-radius: 30px;
+  padding: 0px 50px;
+}
+
+.dashboard-home {
+  padding: 20px;
+}
+
+.my-watch-cards {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.my-watch-card {
+  border-bottom: 1px solid #DEE2E7;
+  margin-bottom: 30px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px 10px 0px 0px;
+
+}
+
+.my-watch-info {
+  min-width: 400px;
+  max-width: 500px;
+  margin-right: 40px;
+}
+
+.edit-watch {
+  background-color: #F6F6F6;
+  min-width: 180px;
+  border-radius: 20px;
+  padding: 0px 10px;
+  margin-bottom: 20px;
+  color: #79C3BD;
+}
+
+.edit-watch:hover {
+  background-color: #D2D2D2;
+  color: white;
+}
+
+.edit-watch-title {
+  padding-top: 18px;
+}
