--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -1,18 +1,59 @@
 <div class="show-watch-body">
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon navbar-dark bg-dark">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "logo.png", :class => "style-logo" %>
+    <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item active">
+          <%= link_to "Home", "#", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Messages", "#", class: "nav-link" %>
+        </li>
+        <li class="nav-item dropdown">
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Action", "#", class: "dropdown-item" %>
+            <%= link_to "Another action", "#", class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
   <div class="show-watch">
-    <div class="show_card" style="max-width: 840px; align-content: center;padding-top: 5px">
-      <div class="row no-gutters">
-        <div class="col-md-4">
+    <div class="show_card" style="min-width: 1200px; max-width:1201px; align-content: center">
+      <div class="row no-gutters" id="watch-card">
+        <div class="col-md-4"style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(@watch.photos.first.key) %>)">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title"> <%= @watch.brand %> </h5>
-            <p class="card-text"> <%= @watch.description %> </p>
-            <p class="card-text"> <%= @watch.price %> € </p>
-            <div class="inner-wrapper header-textbox-bottom-right">
-              <button class="btn btn-primary">Book now</button>
+            <div class="display-top">
+              <h5 class="card-title"> <%= @watch.brand %> </h5>
+              <i class="fas fa-heart"></i>
             </div>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <div class="correct-display">
+              <p class="card-text"> <%= @watch.description %> </p>
+              <div class="display-bottom">
+                <p class="card-text"> <%= @watch.price %> € </p>
+                <div class="inner-wrapper header-textbox-bottom-right">
+                  <button class="btn btn-primary" style="border-radius: 8px">Book now</button>
+              </div>
+            </div>
+            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
           </div>
         </div>
       </div>
