--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
   <input type="search" id="search-box" placeholder="Search">
 </form>
 
-    <a class="btn btn-primary rent-button" href="#">Rent now</a>
+    <a class="rent-button-to-watches" href="#">Rent now</a>
   </div>
 </div>
 
