--- a/app/views/watches/edit.html.erb
+++ b/app/views/watches/edit.html.erb
@@ -1,13 +1,78 @@
-<div class="new-container w-50 ">
-  <div class="new-watch  ">
-      Edit this watch
-  <div class="card-body">
-<%= simple_form_for @watch do |f| %>
-          <%= f.input :brand %>
-          <%= f.input :description %>
-          <%= f.input :photo, as: :file %>
-          <%= f.submit "Submit", class: "btn btn-dark  w-25" %>
-        <% end %>
+<div class="edit-my-watch">
+
+  <div class="edit-watch-title-name d-flex justify-content-center align-items-center">
+    <h1>Edit your watch</h1>
   </div>
+
+  <div class="logo-box">
+    <%= image_tag "logo.png", :class => "dashboard-style-logo", :id => "sidebar" %>
+  </div>
+
+  <div class="my-watch-card d-flex">
+    <div class='my-watch-info-edit'>
+      <%= simple_form_for @watch do |f| %>
+
+      <div class = "edit-watch-details">
+        <% @watch.photos.each do |photo| %>
+          <div class="my-watch-image"style="url(<%= cl_image_path(photo.key) %>)"></div>
+          <p>Images</p>
+          <a data-toggle="collapse" href="#imageEdit" role="button" aria-expanded="false" aria-controls="collapseExample">
+            <i class="fas fa-edit"></i>
+          </a>
+        <% end %>
+      </div>
+
+      <div class="collapse editBlock" id="imageEdit">
+        <div class="card card-body">
+          <%= f.input :photo, as: :file %>
+        </div>
+      </div>
+
+      <div class = "edit-watch-details">
+        <h2><%= @watch.brand %></h2>
+        <a data-toggle="collapse" href="#brandEdit" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <i class="fas fa-edit"></i>
+        </a>
+      </div>
+
+      <div class="collapse editBlock" id="brandEdit">
+        <div class="card card-body">
+            <%= f.input :brand %>
+          </div>
+      </div>
+
+      <div class = "edit-watch-details">
+        <p><strong>€ <%= @watch.price %></strong></p>
+        <a data-toggle="collapse" href="#priceEdit" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <i class="fas fa-edit"></i>
+        </a>
+      </div>
+
+      <div class="collapse editBlock" id="priceEdit">
+        <div class="card card-body">
+            <%= f.input :price %>
+          </div>
+      </div>
+
+      <div class = "edit-watch-details">
+        <p><%= @watch.description %></p>
+        <a data-toggle="collapse" href="#descriptionEdit" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <i class="fas fa-edit"></i>
+        </a>
+      </div>
+
+        <div class="collapse editBlock" id="descriptionEdit">
+          <div class="card card-body">
+              <%= f.input :description %>
+            </div>
+        </div>
+
+      <%= f.submit "Submit your changes", id: "btn-edit" %>
+          <% end %>
+
+    </div>
   </div>
 </div>
+
+
+
