booking fix and style

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -42,7 +42,7 @@ padding: 10px;
   font-family:times;
 }
 .card-watches{
-  background-color: rgba(52, 58, 64, 0.4);
+  background-color: rgba(52, 58, 64, 0.3);
   background-position: 50% 10%;
   width: auto;
   border-radius: 10px;
@@ -54,9 +54,9 @@ padding: 10px;
 }
 
 .card-title{
-  color:silver;
+  color:#A9A9A9;
   text-align: left;
-  text-shadow: 2px 2px #677175;
+  text-shadow: 2px 1px #000000;
 }
 
 .index-button {
