--- a/app/assets/stylesheets/components/_showwatch.scss
+++ b/app/assets/stylesheets/components/_showwatch.scss
@@ -8,6 +8,21 @@
   border-color: #1111;
 
 }
+.watch-price{
+  text-align: right;
+  color: black;
+  font-weight: bold;
+  text-decoration: underline;
+  display: flex;
+
+}
+
+
+.show-title{
+  color: black;
+  font-weight: bold;
+  text-decoration: underline;
+}
 
 .col-md-4 {
   background-size: cover;
