--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -3,12 +3,17 @@
   font-weight: 100;
   padding: 10px;
 }
-
-h4
-{
-  text-align: center;
+.hallo{
+  margin-left: 225px;
+  justify-content:center;
 }
 
+
+
+.correct-center{
+  margin-right: 160px;
+  text-align: center;
+}
 .login{
   padding: 7px;
   color: white;
