--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -44,13 +44,13 @@
 
 
             <div class="display-top">
-              <h5 class="card-title"> <%= @watch.brand %> </h5>
+              <h5 class="show-title"> <%= @watch.brand %> </h5>
               <i class="fas fa-heart"></i>
             </div>
             <div class="correct-display">
               <p class="card-text"> <%= @watch.description %> </p>
               <div class="display-bottom">
-                <p class="card-text"> <%= @watch.price %> € </p>
+                <p class="watch-price"> <%= @watch.price %> €/day </p>
                 <div class="inner-wrapper header-textbox-bottom-right">
                   <% if user_signed_in? %>
                   <%= link_to 'Book Now', new_watch_booking_path(@watch), class: "btn book-btn btn-primary" %>
