--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -3,16 +3,21 @@
   <div class="page-header">
     <h1>Our <strong>watches</strong></h1>
   </div>
-  <div class="index-page">
+  <div class="index-page" id="map-container">
     <div class="row">
       <% @watches.each do |watch| %>
 
       <%= render 'card', watch: watch %>
       <% end %>
     </div>
+    <div id="map"
+         style="width: 100%; height: 100vh;"
+         data-markers="<%= @markers.to_json %>"
+         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
-
   </div>
 </div>
+
+
 
 
