Homepage done, edits done

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -238,3 +238,8 @@ p.lender-info {
 .edit-watch-title {
   padding-top: 18px;
 }
+
+.dropdown.dashboard-home{
+  padding-top: 20px;
+  padding-right: 20px;
+}
