--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,13 @@
 // Specific CSS for your home-page
-.banner {
+.main-photo-banner {
+  background-image: url('watch2.jpg');
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  height: 90vh;
 }
 
-.banner h1 {
+.main-photo-banner h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -13,13 +15,41 @@
   font-weight: bold;
 }
 
-.banner p {
-  font-size: 20px;
+.main-photo-banner p {
+  font-size: 40px;
   color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 2px 2px 3px 3px rgba(255,255,255,0.7);
 }
 
 h1,h2,h3,p {
   font-family: 'Raleway', sans-serif;
+}
+
+.items-menu-bar .fa-home {
+  color: white;
+  padding-right: 40px;
+}
+
+.searchform.group.main {
+  color: white;
+  position: relative;
+}
+
+#search-box {
+  background-color: rgba(255,255,255,0.7);
+  padding: 10px;
+}
+
+.searchform .fa-search{
+  position: absolute;
+  right: 95px;
+  bottom: 10px;
+}
+
+.searchform a{
+  color: white;
+}
+
+.searchform a:hover{
+  color: #1EDD88;
 }
