--- a/app/views/watches/index.html.erb
+++ b/app/views/watches/index.html.erb
@@ -1,17 +1,52 @@
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon navbar-dark bg-dark">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "logo.png", :class => "style-logo" %>
+    <% end %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item active">
+          <%= link_to "Home", "#", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Messages", "#", class: "nav-link" %>
+        </li>
+        <li class="nav-item dropdown">
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Action", "#", class: "dropdown-item" %>
+            <%= link_to "Another action", "#", class: "dropdown-item" %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+          </div>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+
+
 <div class="index-page">
 
   <div class="page-header">
     <h1>Our <strong>watches</strong></h1>
   </div>
-  <div class="index-page" id="map-container">
-    <div class="row">
+  <div id="map-container">
+    <div class="cards-index-container">
       <% @watches.each do |watch| %>
 
       <%= render 'card', watch: watch %>
       <% end %>
     </div>
     <div id="map"
-         style="width: 100%; height: 100vh;"
+         style="width: 35vw; height: 100vh;"
          data-markers="<%= @markers.to_json %>"
          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
