--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -104,7 +104,7 @@ padding: 10px;
 
 .index-page{
 
-background-image: url(background8.jpg);
+background-image: image-url("background8.jpg");
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
