--- a/app/assets/stylesheets/components/_newwatch.scss
+++ b/app/assets/stylesheets/components/_newwatch.scss
@@ -16,7 +16,7 @@ position: relative;
 }
 
 .new-watch-body{
-background-image: url(background.jpg);
+background-image: image-url('background.jpg');
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
