--- a/app/assets/stylesheets/components/_showwatch.scss
+++ b/app/assets/stylesheets/components/_showwatch.scss
@@ -49,7 +49,7 @@
 }
 
 .show-watch-body {
-  background-image: url("show.jpg");
+  background-image: image-url("show.jpg");
   background-size: cover;
   background-position: center;
   height: 650px;
