--- a/app/assets/stylesheets/components/_bookingnew.scss
+++ b/app/assets/stylesheets/components/_bookingnew.scss
@@ -4,7 +4,7 @@
 .request-booking{
 text-align: center;
 margin-top: 25px;
-background-image: url(background8.jpg);
+background-image: image-url("background8.jpg");
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
