--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -60,7 +60,7 @@ color: white;
 .container-sign-in {
   display: flex;
   justify-content: center;
-  background-image: url(background.jpg);
+  background-image: image-url('background.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover
