--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -27,7 +27,7 @@ a:hover {
 .dashboard-sidebar {
   width: 15%;
   min-width: 150px;
-  background-image: url(background-01.jpg);
+  background-image: image-url('background-01.jpg');
   height: 100vh;
   background-size: cover;
   position: sticky;
