--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 .main-photo-banner {
-  background-image: url('watch2.jpg');
+  background-image: image-url('watch2.jpg');
   background-size: cover;
   background-position: center;
   padding: 150px 0;
