--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -37,7 +37,7 @@
   <div class="show-watch">
     <div class="show_card" style="min-width: 1200px; max-width:1201px; align-content: center">
       <div class="row no-gutters" id="watch-card">
-        <div class="col-md-4"style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= cl_image_path(@watch.photos.first.key) %>)">
+        <div class="col-md-4"style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("<%= cl_image_path(@watch.photos.first.key) %>")">
         </div>
         <div class="col-md-8">
           <div class="card-body">
