--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,7 +21,7 @@
   text-shadow: 2px 2px 3px 3px rgba(255,255,255,0.7);
 }
 
-h1,h2,h3,p {
+h1,h2,h3,h4,h5,p {
   font-family: 'Raleway', sans-serif;
 }
 
