--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -243,3 +243,12 @@ p.lender-info {
   padding-top: 20px;
   padding-right: 20px;
 }
+
+.dashboard-card-image {
+ height: 40vh;
+ background-position: center;
+}
+
+.booked-card-info h4 {
+  color: black;
+}
