--- a/app/views/watches/show.html.erb
+++ b/app/views/watches/show.html.erb
@@ -34,41 +34,40 @@
     </ul>
   </div>
 </div>
-<div id="map-container">
-  <div class="show-watch">
-    <div class="show_card" style="min-width: 800px; max-width:801px; align-content: center">
-      <div class="row no-gutters" id="watch-card">
-        <div class="col-md-4"style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("<%= cl_image_path(@watch.photos.first.key) %>")">
+<div id="map-container" style="width:100%; padding-top: 45px; padding-left: 40px; margin-right: 0">
+
+  <div class="show-card-watches d-flex" style="margin-right: 10px">
+
+    <div class="card-image-index col-4" style="background-image: url(<%= cl_image_path(@watch.photos.first.key) %>); background-position: center;">
+    </div>
+
+    <div class="card-body-info col-8" style="margin-right: 10px;">
+      <div class="card-body-index">
+        <div class="title-and-like d-flex justify-content-between">
+          <h4 class="card-index-title"><strong><%= @watch.brand %></strong></h4>
+          <i class="far fa-heart active" id="not-liked"></i>
+          <i class="fas fa-heart inactive" id="liked"></i>
         </div>
-        <div class="col-md-8">
-          <div class="card-body">
-
-
-            <div class="display-top">
-              <h5 class="show-title"> <%= @watch.brand %> </h5>
-              <i class="fas fa-heart"></i>
-            </div>
-            <div class="correct-display">
-              <p class="card-text"> <%= @watch.description %> </p>
-              <div class="display-bottom">
-                <p class="watch-price"> <%= @watch.price %> €/day </p>
-                <div class="inner-wrapper header-textbox-bottom-right">
-                  <% if user_signed_in? %>
-                  <%= link_to 'Book Now', new_watch_booking_path(@watch), class: "btn book-btn btn-primary" %>
-                  <% else %>
-                  <%= link_to 'Book Now', user_session_path(), class: "btn book-btn btn-primary" %>
-                  <% end %>
-                </div>
-
-            </div>
-            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+        <h5 class="card-index-description"><%= @watch.description %></h5>
+      </div>
+      <div class="card-index-booking d-flex justify-content-between">
+        <div>
+          <h4 class="index-price"><strong>€ <%= @watch.price %> per day</strong></h4>
+          <div class="stars-index d-flex">
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
+            <i class="far fa-star"></i>
           </div>
+          <p class="note-text">Prices may vary depending on selected date </p>
         </div>
       </div>
     </div>
   </div>
+
   <div id="map"
-         style="width: 35vw; height: 80vh;"
+         style="width: 35vw; height: 80vh; position: sticky; top: 0; right: 0; border: none;"
          data-markers="<%= @markers.to_json %>"
          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
