--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -60,7 +60,9 @@
             </div>
             </br>
             <div class="dashboard-cards">
+
               <% current_user.bookings.each do |booking| %>
+              <% if booking.end_date > Time.now  %>
                 <div class="card dashboard-card" style="width: 18rem;">
                   <img class="card-img-top" src="..." alt="Card image cap">
                   <div class="card-body">
@@ -78,6 +80,7 @@
                     <a href="#" class="btn btn-dashboard">See booking details</a>
                   </div>
                 </div>
+                <% end %>
               <% end %>
             </div>
           </div>
@@ -90,6 +93,7 @@
 
           <div class="dashboard-cards">
               <% current_user.bookings.each do |booking| %>
+              <% if booking.end_date < Time.now  %>
                 <div class="card dashboard-card" style="width: 18rem;">
                   <img class="card-img-top" src="..." alt="Card image cap">
                   <div class="card-body">
@@ -100,6 +104,7 @@
                     <a href="#" class="btn btn-dashboard">See booking details</a>
                   </div>
                 </div>
+                <% end %>
               <% end %>
             </div>
 
