--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -1,30 +1,26 @@
 
-.searchform {
-  display: block;
+.searchform input {
   margin: 0;
   overflow: hidden;
-  width: 50%;
-}
-label, input {
-  vertical-align: baseline;
+  width: 200px;
+  position:relative;
 }
 
-label {
-  margin: 0.125em 0.125em 0 0;
-}
-
-input[type="search"] {
-  border: 2px solid #737373;
-  border-width: 0 0 3px;
-  background-color: transparent;
-  font: 22px "Open Sans", sans-serif;
-  padding: 0.125em 0.225em;
-  width: 85%;
-  float: left;
-
-}
 input[type="search"]:focus {
   color: #E18728;
   border-color: #E18728;
   outline: none;
+}
+
+
+.index-wrap{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ced4da
+}
+
+
+.index-wrap input{
+  border: none;
 }
