--- a/app/views/watches/_card.html.erb
+++ b/app/views/watches/_card.html.erb
@@ -22,7 +22,7 @@
         <p class="note-text">Prices may vary depending on selected date </p>
       </div>
       <div class="index-btn">
-        <%= link_to 'Show', watch_path(watch), class: "index-button" %>
+        <%= link_to 'Show', new_watch_booking_path(watch), class: "index-button" %>
       </div>
     </div>
   </div>
