--- a/app/assets/stylesheets/components/_bookingnew.scss
+++ b/app/assets/stylesheets/components/_bookingnew.scss
@@ -13,12 +13,6 @@ height: calc(100vh - 50px);
 
 }
 
-.booking-brand{
-  text-align: center;
-
-
-}
-
 .booking-info{
   width: auto;
   border-radius: 10px;
@@ -39,20 +33,18 @@ height: calc(100vh - 50px);
 
 
 .dates-picker{
-  background-color: rgba(52, 58, 64, 0.2);
-  background-position: 50% 10%;
-  width: 500px;
-  border-radius: 10px;
-  text-align: center;
-  height: 220px;
-  margin: 10px;
-  margin-left: 20px;
-  opacity: 10px;
-  color: white;
-  margin-bottom: 24px;
-  border-style: solid;
-  border-color: #1111;
+  background-color: white;
+  border-radius: 0px 0px 10px 0px;
+  text-align: left;
+  color: black;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
+.datepicker {
+  width: 50%;
+  font-family: 'Raleway', sans-serif;
 }
 
 .booking-pay{
@@ -74,32 +66,16 @@ height: calc(100vh - 50px);
 
 
 .date-button{
-  ox-shadow:inset 0px 1px 0px 0px #54a3f7;
-  background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
-  background-color:#007dc1;
+  background-color:#79C3BD;
   border-radius:3px;
-  border:1px solid #124d77;
   display:inline-block;
   cursor:pointer;
   color:#ffffff;
-  font-family:Arial;
-  font-size:13px;
-  padding:6px 24px;
   text-decoration:none;
-  text-shadow:0px 1px 0px #154682;
 }
 .date-button:hover {
-  background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
   background-color:#0061a7;
+  color: white;
 }
-.date-button:active {
-  position:relative;
-  top:1px;
-}
-
-
-.panel-title {display: inline;font-weight: bold;}
-.checkbox.pull-right { margin: 0; }
-.pl-ziro { padding-left: 0px; }
 
 
