--- a/app/assets/stylesheets/components/_newwatch.scss
+++ b/app/assets/stylesheets/components/_newwatch.scss
@@ -2,7 +2,7 @@
 color: white;
 font-style: oblique;
 margin-left: 400px;
-background-color: rgba(52, 58, 64, 0.6);
+background-color: rgba(52, 58, 64, 0.4);
 background-position: 50% 10%;
 width: auto;
 border-radius: 10px;
@@ -11,24 +11,94 @@ text-align: center;
 margin-bottom: 120px;
 padding: 25px;
 position: relative;
-    top: 15%;
+    top: 0%;
 
 }
 
 .new-watch-body{
-background-image: image-url('background.jpg');
+background-image: image-url('background6.jpg');
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 margin-top: 0px;
-
+text-align: center;
 height: 100vh;
+}
+.new-card-body{
+margin-left: 140px;
+margin-right: 140px;
+
 }
 
 
 .btn-dark{
-  background-color: #FFD700;
+  background-color: #0073B7;
   border-radius: 40px;
 }
 
 
+
+.watch-new-info{
+  width: auto;
+  border-radius: 10px;
+  text-align: center;
+  height: 420px;
+
+  margin: 10px;
+  opacity: 10px;
+  color: white;
+  background-color: rgba(52, 58, 64, 0.2);
+  border-style: solid;
+  border-color: #1111;
+}
+
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #0073b7; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #0073b7; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.date-range{
+  text-align: center;
+}
+ .my-new-watch-card {
+  padding: 20px;
+  width: 60%;
+  margin: 0px auto;
+  margin-bottom: 60px;
+  background-color: white;
+  border-radius: 10px;
+}
